Get metadata for file.